--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn install
-      - run: yarn deploy
+      - run: env CLOUDFLARE_API_TOKEN=${{secrets.CLOUDFLARE_API_TOKEN}} yarn deploy
 
