--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,9 @@ compatibility_date = "2022-07-06"
 # under the `[vars]` block using
 # the `key = "value"` format
 
-[vars]
+
+
+# [vars]
 # ...
 
 # ...
@@ -15,3 +17,7 @@ compatibility_date = "2022-07-06"
 # - ENV_ID
 # - API_KEY
 # Run `wrangler secret put <NAME> <VALUE>` for each of these
+
+ kv_namespaces =[{ binding = "VISITOR_CACHE_KV", preview_id = "af7b76ef658b4f6f8c17650494968518", id = "af03c42f07cc45b39d4f9be560499dbe" }]
+
+
