--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^3.13.0",
+    "@types/cookie": "^0.5.1",
     "typescript": "^4.7.4",
     "wrangler": "2.0.16"
   },
@@ -14,7 +15,8 @@
     "wrangler": "wrangler"
   },
   "dependencies": {
-    "@flagship.io/js-sdk": "^3.0.9",
+    "@flagship.io/js-sdk": "^3.0.15",
+    "cookie": "^0.5.0",
     "node-fetch": "2"
   }
 }
