--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.3.0",
-    "@flagship.io/js-sdk": "^3.0.15",
+    "@flagship.io/js-sdk": "^3.1.1-alpha.0",
     "cookie": "^0.5.0",
     "node-fetch": "2",
     "string-template": "^1.0.0"
